make grid size the same as canvas size

--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -1,1 +1,1 @@
-<canvas id='canvas' width='800' height='600'></canvas>
+<canvas id='canvas' width={{screenPixelWidth}} height={{screenPixelHeight}}></canvas>
