--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -1,1 +1,5 @@
 <canvas id='canvas' width={{screenPixelWidth}} height={{screenPixelHeight}}></canvas>
+<ul>
+  <li>Score: {{score}}</li>
+  <li>Level: {{level}}</li>
+</ul>
