pull out pac and level classes

--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -1,5 +1,5 @@
-<canvas id='canvas' width={{screenPixelWidth}} height={{screenPixelHeight}}></canvas>
+<canvas id='canvas' width={{level.pixelWidth}} height={{level.pixelHeight}}></canvas>
 <ul>
   <li>Score: {{score}}</li>
-  <li>Level: {{level}}</li>
+  <li>Level: {{levelNumber}}</li>
 </ul>
