limit power mode and fade ghosts in and out

--- a/app/templates/components/pac-man.hbs
+++ b/app/templates/components/pac-man.hbs
@@ -3,4 +3,5 @@
   <li>Score: {{score}}</li>
   <li>Level: {{levelNumber}}</li>
   <li>Lives: {{lives}}</li>
+  <li>Power Mode: {{pac.powerModeTime}}</li>
 </ul>
